# devhub

./: .editorconfig  .eslintrc.cjs  .prettierrc  Build_Deploy_and_Testing_Guide.md  Core_Features_Development_Guide.md  DevHub_Development_Plan.md  DevHub_Implementation_Guide.md  DevHub_Requirements.md  Development_Tools_and_Best_Practices.md  PROJECT_SUMMARY.md  Project_Structure_and_Code_Standards.md  TASK_2.1_COMPLETION_REPORT.md  TASK_2.2_COMPLETION_REPORT.md  TASK_2.3_COMPLETION_REPORT.md  TASK_2.4_COMPLETION_REPORT.md  TASK_PLAN.md  components.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
.claude/: settings.local.json
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: connection.rs  database.rs  mod.rs  ssh.rs
src-tauri/src/models/: connection.rs  examples.rs  mod.rs
src-tauri/src/modules/: mod.rs
src-tauri/src/modules/database/: mod.rs
src-tauri/src/modules/ssh/: client.rs
src-tauri/src/utils/: crypto.rs
src/components/common/: SearchBar.tsx  ThemeToggle.tsx
src/components/connection/: ConnectionDialog.tsx  ConnectionList.tsx  GroupDialog.tsx  GroupTree.tsx  index.ts
src/components/database/: ResultTable.tsx  SQLEditor.tsx  index.ts
src/hooks/: useKeybindingListener.ts
src/pages/: ConnectionsPage.tsx  DatabasePage.tsx  SSHPage.tsx  SettingsPage.tsx
src/stores/: useCommandHistoryStore.ts  useConnectionStore.ts  useKeybindingStore.ts  useThemeStore.ts
src/types/: connection.ts  examples.ts  index.ts  theme.ts
(+11 files in other folders)
