[package]
name = "devhub"
version = "0.1.0"
description = "DevHub - 跨平台开发运维工具"
authors = ["you"]
license = "MIT"
edition = "2021"

[profile.release]
opt-level = "z"
strip = true
lto = true

[profile.dev]
debug = true

[dependencies]
tauri = { version = "1.5", features = [ "macos-private-api", "cli", "api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono", "mysql", "postgres"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10"
base64 = "0.21"
once_cell = "1.19"
russh = "0.45"
russh-keys = "0.45"
async-trait = "0.1"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
